--- a/package.json
+++ b/package.json
@@ -6,9 +6,27 @@
     "repository": "https://github.com/dushaobindoudou/babel-plugin-require-all",
     "license": "MIT",
     "keywords": [
-          "babel-plugin",
-          "requireAll",
-          "require dirs all files"
-     ]
-
+        "babel-plugin",
+        "requireAll",
+        "require dirs all files"
+    ],
+    "devDependencies": {
+        "@babel/cli": "^7.4.4",
+        "@babel/core": "^7.4.4",
+        "@babel/plugin-proposal-do-expressions": "^7.2.0",
+        "@babel/preset-env": "^7.4.4",
+        "@babel/preset-stage-2": "^7.0.0",
+        "babel-preset-minify": "^0.5.0",
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb-base": "^13.1.0",
+        "eslint-plugin-import": "^2.17.2"
+    },
+    "scripts": {
+        "build": "npx babel src --out-dir lib",
+        "build:watch": "npx babel src -w --out-dir lib",
+        "build:production": "BABEL_ENV=production npm run build"
+    },
+    "dependencies": {
+        "babel-plugin-transform-ternary-to-if-else": "^1.0.2"
+    }
 }
